<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context=".Register">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/IDcardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="0dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:counterEnabled="true"
        app:counterMaxLength="13">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IDcardEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/IDcard"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IDcardContainer"
        android:layout_marginTop="30dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:passwordToggleEnabled="true"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLength="16"
            android:inputType="textPassword"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordContainer"
        android:layout_marginTop="30dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:passwordToggleEnabled="true"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmpassword"
            android:maxLength="16"
            android:inputType="textPassword"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="#262C3D"
        android:text="กลับ"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/confirmPasswordContainer"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/btn2"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/confirmPasswordContainer"
        android:layout_toRightOf="@+id/btn"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#262C3D"
        android:text="ลงทะเบียน"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="ลงทะเบียน"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />


</RelativeLayout>